Issue #8404: Fix set operations on dictionary views.